--- a/src/app/pages/management.component/management.component.html
+++ b/src/app/pages/management.component/management.component.html
@@ -463,6 +463,10 @@
                 <span class="text-danger" aria-label="polite">
                   Total parking spots required.
                 </span>
+                } @if(hasError('totalParkingSpots', 'pattern')){
+                <span class="text-danger" aria-label="polite">
+                  Total parking spots must be a number.
+                </span>
                 }
               </div>
             </form>
