--- a/src/app/app.html
+++ b/src/app/app.html
@@ -156,7 +156,7 @@
               }}</span>
               <a
                 class="nav-link px-3 rounded d-flex align-items-center"
-                (click)="userService.onSignout()"
+                (click)="onSignOut()"
                 aria-label="Sign out"
               >
                 <i class="bi bi-box-arrow-right me-1"></i>
