--- a/src/app/pages/dashboard.component/dashboard.component.css
+++ b/src/app/pages/dashboard.component/dashboard.component.css
@@ -1,3 +1,10 @@
+/* Host */
+:host {
+  display: flex;
+  justify-content: center;
+  height: calc(100vh - 56px);
+  padding: 1rem;
+}
 .parking-card {
   display: flex;
   flex-direction: column;
