--- a/src/app/pages/management.component/management.component.css
+++ b/src/app/pages/management.component/management.component.css
@@ -1,3 +1,10 @@
+/* Host */
+:host {
+  display: flex;
+  justify-content: center;
+  min-height: calc(100vh - 56px);
+  padding: 1rem;
+}
 .management-container {
   .tree-panel {
     max-height: 70vh;
