--- a/src/app/pages/report.component/report.component.css
+++ b/src/app/pages/report.component/report.component.css
@@ -1,3 +1,10 @@
+/* Host */
+:host {
+  display: flex;
+  justify-content: center;
+  min-height: calc(100vh - 56px);
+  padding: 1rem;
+}
 .table-hover tbody tr:hover {
   background-color: #f8f9fa;
 }
