--- a/src/app/pages/management.component/management.component.html
+++ b/src/app/pages/management.component/management.component.html
@@ -35,6 +35,7 @@
                   <button
                     class="btn btn-sm btn-link p-0"
                     (click)="toggleSite(site)"
+                    title="close"
                   >
                     <i
                       class="bi"
@@ -513,6 +514,7 @@
           <button
             type="button"
             class="btn-close"
+            title="close"
             (click)="closeDeleteModal()"
           ></button>
         </div>
