--- a/src/app/pages/dashboard/dashboard-stats/dashboard-stats.html
+++ b/src/app/pages/dashboard/dashboard-stats/dashboard-stats.html
@@ -1,33 +1,41 @@
 <div class="row g-3 mb-4 stats-row">
   <div class="col-6 col-md-3">
-    <div class="card">
-      <div class="card-body text-center">
-        <h6>Total spots</h6>
-        <h4>{{ totalSpots() }}</h4>
+    <div class="stat-animation">
+      <div class="card">
+        <div class="card-body">
+          <h6>Total spots</h6>
+          <h4>{{ totalSpots() }}</h4>
+        </div>
       </div>
     </div>
   </div>
   <div class="col-6 col-md-3">
-    <div class="card">
-      <div class="card-body text-center">
-        <h6>Available spots</h6>
-        <h4>{{ availableSpots() }}</h4>
+    <div class="stat-animation">
+      <div class="card">
+        <div class="card-body">
+          <h6>Available spots</h6>
+          <h4>{{ availableSpots() }}</h4>
+        </div>
       </div>
     </div>
   </div>
   <div class="col-6 col-md-3">
-    <div class="card">
-      <div class="card-body text-center">
-        <h6>Unavailable spots</h6>
-        <h4>{{ unavailableSpots() }}</h4>
+    <div class="stat-animation">
+      <div class="card">
+        <div class="card-body">
+          <h6>Unavailable spots</h6>
+          <h4>{{ unavailableSpots() }}</h4>
+        </div>
       </div>
     </div>
   </div>
   <div class="col-6 col-md-3">
-    <div class="card">
-      <div class="card-body text-center">
-        <h6>Occupancy rate</h6>
-        <h4>{{ occupancyRate() }}%</h4>
+    <div class="stat-animation">
+      <div class="card">
+        <div class="card-body">
+          <h6>Occupancy rate</h6>
+          <h4>{{ occupancyRate() }}%</h4>
+        </div>
       </div>
     </div>
   </div>
